--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 body {
     font-family: Arial, sans-serif;
     color: #fff;
-    background: url('professional-background.jpg') no-repeat center center fixed;
+    background: url('black1.jpg') no-repeat center center fixed;
     background-size: cover;
     padding: 0 20px; /* Added padding to create space from sides */
 }
